--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,9 @@ header {
 }
 
 .image-hover-container:hover .hover-info {
-    opacity: 1;
+    opacity: 0.7;
+    backdrop-filter: blur(5px); /* Adiciona o efeito de blur */
+    background-color: rgba(255, 255, 255, 0); /* Remove a cor de fundo */
 }
 
 .info-content {
@@ -509,7 +511,7 @@ header {
     font-size: 1.2em;
     text-transform: uppercase;
     margin-bottom: 10px;
-    color: var(--cor-branco);
+    color: black;
 }
 
 .info-content p {
